// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Bottom Wizard Bar Default 1`] = `
.c1 {
  padding-left: 12px;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  background-color: hsl(223.5,100%,45%);
}

.c7:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
  border-top: 1px solid #EBEBE8;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c6 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c6 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c8 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <a
          className="c4"
          href="https://nordnet.se/cancel"
          onClick={[Function]}
        >
          <span
            className="c5"
          >
            Cancel
          </span>
        </a>
      </div>
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <a
            className="c4"
            href="https://nordnet.se/previous"
            onClick={[Function]}
          >
            <span
              className="c5"
            >
              Previous
            </span>
          </a>
        </div>
        <div
          className="c3"
        >
          <a
            className="c7 c8"
            href="https://nordnet.se/next"
            onClick={[Function]}
          >
            <span>
              <span
                className="c5"
              >
                Next
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Last Step And Loading 1`] = `
.c1 {
  padding-left: 12px;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  background-color: hsl(223.5,100%,45%);
}

.c7:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
  border-top: 1px solid #EBEBE8;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c6 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c6 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c8 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c4"
          disabled={true}
          onClick={[Function]}
          type="reset"
        >
          <span
            className="c5"
          >
            Cancel
          </span>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c4"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c5"
            >
              Previous
            </span>
          </button>
        </div>
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c7 c8"
            onClick={[Function]}
            type="submit"
          >
            <span>
              <span
                className="c5"
              >
                Submit
              </span>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Previous Button Disabled 1`] = `
.c1 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
  border-top: 1px solid #EBEBE8;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c3 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c6 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c5 c6"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c7"
              >
                Next
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Webview Embedded 1`] = `
.c1 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  background-color: hsl(223.5,100%,45%);
}

.c7:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
  border-top: 1px solid #EBEBE8;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c3 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c8 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c5"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c6"
            >
              Previous
            </span>
          </button>
        </div>
        <div
          className="c4"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c7 c8"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c6"
              >
                Next
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Webview Embedded Last Step And Loading 1`] = `
.c1 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  background-color: hsl(223.5,100%,45%);
}

.c7:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
  border-top: 1px solid #EBEBE8;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c3 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c8 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c5"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c6"
            >
              Previous
            </span>
          </button>
        </div>
        <div
          className="c4"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c7 c8"
            onClick={[Function]}
            type="submit"
          >
            <span>
              <span
                className="c6"
              >
                Submit
              </span>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
